added time complexity notes and add programminh 101 folder

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 <body>
     <!-- Content goes here -->
 
-    <script src="loops.js"></script>
-    <script src="secondLargest.js"></script>
-    <script src="countDigit.js"></script>
-    <script src="palindrome.js"></script>
+    <script src="programming 101/countDigit.js"></script>
+    <script src="programming 101/secondLargest.js"></script>
+    <script src="programming 101/countDigit.js"></script>
+    <script src="programming 101/palindrome.js"></script>
+    <script src="programming 101/reverserInteger.js"></script>
 </body>
 </html>
