array 0 DSA problem

--- a/index.html
+++ b/index.html
@@ -16,5 +16,9 @@
     <script src="programming 101/countDigit.js"></script>
     <script src="programming 101/palindrome.js"></script>
     <script src="programming 101/reverserInteger.js"></script>
+    <script src="Array 0/removeDuplicates.js"></script>
+    <script src="Array 0/removeElement.js"></script>
+    <script src="Array 0/reverseString.js"></script>
+    <script src="Array 0/buyAndSellStock.js"></script>
 </body>
 </html>
