--- a/index.html
+++ b/index.html
@@ -20,5 +20,10 @@
     <script src="Array 0/removeElement.js"></script>
     <script src="Array 0/reverseString.js"></script>
     <script src="Array 0/buyAndSellStock.js"></script>
+    <script src="Array 0/mergeSortedArray.js"></script>
+    <script src="Array 0/moveZeros.js"></script>
+    <script src="Array 0/findMaxConsecutiveOnes.js"></script>
+    <script src="Array 0/missingNumber.js"></script>
+    <script src="Array 0/singleNumber.js"></script>
 </body>
 </html>
